--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="text-content">
             <p>Hi! I'm Kecen Pu 蒲柯岑.</p>
             <p>I am a second-year master's student studying psychology at Teachers College, Columbia University. Before coming to NYC, I received Bachelor of Science in Psychology at Beijing Normal University.</p>
-            <p>My interest in psychology started when I was a 15-year-old teenager. I would never get tired of observing people. Their face, body movements, even the tiniest subconscious reaction kept me wondering: What would be the reason?</p>
+            <p>My interest in psychology started when I was a 15-year-old teenager. I would never get tired of observing people around me. Their face, body movements, even the tiniest subconscious reaction kept me wondering: What would be the reason?</p>
             <p>During my academic career, I've had the priviledge to be involved in different research projects. If you are interested, please click my <a href="CV.pdf" target="_blank">CV</a>. </p>
             <p>Currently, my research interest lies in the influence of input language on simple mathematical calculation tasks in Mandarin-English speakers. I use EEG and behavioral tasks to investigate into the question. I'm also fascinated by the cognitive mechanisms underpinning complex mental processes, such as decision making.</p>
             <p>Embarked on a journey to become a scientist-practitioner, every success and failure that I've encountered reminds me of persistence and resilience. As the line in Dead Poets Society goes, "Carpe diem. Seize the day!"</p>
